update on the hover effect and adding the pop up and trailer

--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
     <div id="movies-grid" class="movies-grid">
       <!-- Add more movie elements as needed -->
     </div>
+    <div class="pop-up-container" id="pop-up-container">
+      <div class="pop-up" id="pop-up">
+        <div id="trailerdiv"><p>Movie trailer</p></div>
+      </div>
+    </div>
     <div class="button-container">
       <button id="load-more-movies-btn" class="loadmorebtn">
         Load more movies
