--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="container">
-      <!-- Navbar -->
+      <!-- NAVIGATION -->
       <header>
         <div class="NAVIGATION">
           <div class="webtitle">FLIXTER</div>
@@ -19,14 +19,13 @@
           </div>
         </div>
       </header>
-      <!-- Spectacular -->
       <!-- Showing movies -->
 
       <button class="exit hidden" id="exitbtn">
         Go back to popular movies
       </button>
       <div id="movies-grid" class="movies-grid">
-        <!-- Add more movie elements as needed -->
+        <!-- STRETCH FEATURES -->
       </div>
       <div class="button-container">
         <button id="load-more-movies-btn" class="loadmorebtn">
